trellosys_portfolio_update

--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
                                             <p>At Trellosys, we are passionate about transforming businesses with cutting-edge AI-driven solutions. Our dedicated team specializes in creating intelligent software services that automate processes, analyze complex data, and enhance decision-making capabilities. By leveraging the power of machine learning and data analytics, we help organizations optimize their operations and elevate customer experiences. Our commitment to excellence and creativity ensures that we deliver custom solutions tailored to meet the unique needs of each client. Discover how we can empower your business with innovative technology and drive your success forward.</p>   
                                         </div>
 
-                                        <div id="about-btn" class="wow animated fadeInUp" data-wow-duration="0.6s" 
+                                        <!-- <div id="about-btn" class="wow animated fadeInUp" data-wow-duration="0.6s" 
                                         data-wow-delay=".4s">
                                             <a class="btn btn-lg btn-general btn-blue" href="#work" role="button">Our Work </a>
-                                        </div>   
+                                        </div>    -->
                                     </div>
                                     
                                 </div>
@@ -225,12 +225,12 @@
 
 
             <!-- Work Section -->
-            <section id="work">
+            <!-- <section id="work">
 
                 <div class="content-box">
                     <div class="content-title wow animated fadeInDown"
                     data-wow-duration="0.6s" data-wow-delay=".4s">
-                        <h3>Our Work</h3>
+                        <h3>TECH EXPERTISE</h3>
                         <div class="content-title-underline"></div>
                     </div> 
                 </div>
@@ -301,7 +301,7 @@
                     </div>
                 </div>
 
-            </section>
+            </section> -->
 
 
             <!-- TEAM Part -->
