--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                             <div id="home-heading" class="animated zoomIn">
                                 <h3>Trellosys <br>Transform with AI Excellence</h3>
                             </div>
-                            <div id="home-btn" class="animated zoomIn">
+                            <!-- <div id="home-btn" class="animated zoomIn">
                                 <a class="btn btn-lg btn-general btn-white" href="#work" role="button"
                                 title="View Our Work">View Our Work</a> 
-                            </div>
+                            </div> -->
 
                         </div>
                         
