trellosys_portfolio_update_4

--- a/index.html
+++ b/index.html
@@ -421,55 +421,55 @@
                                 <div id="customers-testimonials" class="text-center owl-carousel owl-theme">
 
                                     <div class="testimonial">
-                                        <img src="img/client/client-2.jpg" class="img-responsive rounded-circle" alt="testimonial">
-                                        <blockquote class="text-center">
-                                            <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                            </p>
-                                        </blockquote>
-                                        <div class="testimonial-author">
-                                            <p>
-                                                <strong>Daniel Watson</strong>
-                                                <span>CEO & Founder - Nike</span>
-                                            </p>
-                                        </div>
-                                    </div>  
-
-                                    <div class="testimonial">
                                         <img src="img/client/client-1.jpg" class="img-responsive rounded-circle" alt="testimonial">
                                         <blockquote class="text-center">
                                             <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                                The app not only meets our requirements but also exceeds our expectations in functionality and design. 
+                                                Their dedication to quality and innovation has made this collaboration a success..
                                             </p>
                                         </blockquote>
                                         <div class="testimonial-author">
                                             <p>
-                                                <strong>Jonah Hill</strong>
-                                                <span>CEO & Founder - Bing</span>
+                                                <strong>Jain</strong>
+                                                <span>Founder - Seago Impex</span>
+                                            </p>
+                                        </div>
+                                    </div> 
+
+                                    <div class="testimonial">
+                                        <img src="img/client/client_aql.jpeg" class="img-responsive rounded-circle" alt="testimonial">
+                                        <blockquote class="text-center">
+                                            <p>
+                                                I highly recommend Trellosys as a digital partner for any organization looking to elevate their digital transformation journey.
+                                                Their expertise in custom software development, mobile applications, and AI solutions is unmatched.
+
+                                            </p>
+                                        </blockquote>
+                                        <div class="testimonial-author">
+                                            <p>
+                                                <strong>Ashiq</strong>
+                                                <span>Founder - Aql biz</span>
                                             </p>
                                         </div>
                                     </div>  
 
                                     <div class="testimonial">
-                                        <img src="img/client/client-3.jpg" class="img-responsive rounded-circle" alt="testimonial">
+                                        <img src="img/client/client_arch_unique.jpeg" class="img-responsive rounded-circle" alt="testimonial">
                                         <blockquote class="text-center">
                                             <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                                From the initial consultation to deployment, their team displayed exceptional professionalism and attention to detail. 
+                                                If you’re looking for a reliable partner to bring your software vision to life, Trellosys is the ideal choice!.
                                             </p>
                                         </blockquote>
                                         <div class="testimonial-author">
                                             <p>
-                                                <strong>Emma Watson</strong>
-                                                <span>CEO & Founder - MAC</span>
+                                                <strong>SHAHEER MUSTHAFA</strong>
+                                                <span>Co Founder - Arch Unique</span>
                                             </p>
                                         </div>
-                                    </div> 
+                                    </div>  
+
+                           
 
                                 </div>
 
@@ -537,19 +537,17 @@
 
                                     <div id="error_msg"></div>
 
-                                    <form action="" id="myForm" onsubmit="return validation();">     
-                                        <input type="text" id="first-name" placeholder="First-Name" class="form-control" >
-                                        <input type="text" id="last-name" placeholder="Last-Name" class="form-control">
-                                        <input type="text" id="email" placeholder="Email-Address" class="form-control" >
-                                        <input type="tel" id="phone" placeholder="Phone Number" class="form-control" >
-                                        <textarea rows="5" id="message" placeholder="Message..." class="form-control"></textarea>
-            
+                                    <form  id="myForm" action="https://api.web3forms.com/submit" method="POST">       
+                                        <!-- onsubmit="return validation();" -->
+                                        <input type="hidden" name="access_key" value="415cf969-60e8-40dc-898d-f29eaa5652cf">
+                                        <input name = "first-name" type="text" id="first-name" placeholder="First-Name" class="form-control" >
+                                        <input  name = "Last-name"type="text" id="last-name" placeholder="Last-Name" class="form-control">
+                                        <input name = "Email-Address" type="text" id="email" placeholder="Email-Address" class="form-control" >
+                                        <input name = "Phone-number" type="tel" id="phone" placeholder="Phone Number" class="form-control" >
+                                        <textarea name = "message" rows="5" id="message" placeholder="Message..." class="form-control"></textarea>
                                         <div id="send-btn">
-                                            <!-- <a href="#" class="btn btn-lg btn-general btn-white" role="button">SEND</a> -->
-                                            <!-- <button type="submit" class="btn btn-lg btn-general btn-white">SEND</button> -->
                                             <input type="submit"  class="btn btn-lg btn-general btn-white">
                                         </div>
-
                                     </form>
                                 </div>
                             </div>
